--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -21,11 +21,11 @@ esphome:
 
 substitutions:
   boot_name: '"Fire Remote <3"'
+  boot_logo_size: "48"
   friendly_name: "M5Fire Remote"
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
-  display_size_x: "240"
   large_font_size: "24"
   medium_font_size: "20"
   small_font_size: "18"
@@ -35,7 +35,7 @@ substitutions:
   margin_size: "8"
   slider_margin_size: "6"
   scroll_bar_width: "8"
-  bottom_bar_margin: "42"
+  bottom_bar_margin: "8"
   now_playing_max_lines: "5"
   draw_now_playing_menu: "true"
   draw_battery_level: "true"
@@ -190,7 +190,7 @@ display:
     led_pin: 32  ### see note below ###
     reset_pin: 33
     id: my_display
-    update_interval: 10s
+    update_interval: 3600s 
     lambda: |-
       manageLight();
       if (idleTime < 0) {
