--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -23,11 +23,11 @@ esp32:
 
 substitutions:
   boot_name: '"M5Stick Remote <3"'
+  boot_logo_size: "48"
   friendly_name: M5stickcRemote
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
-  display_size_x: "240"
   large_font_size: "20"
   medium_font_size: "14"
   small_font_size: "12"
@@ -203,7 +203,7 @@ display:
     col_start: 0
     row_start: 0
     eight_bit_color: true
-    update_interval: 5s    
+    update_interval: 3600s    
     lambda: |-
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
