--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -23,6 +23,7 @@ esp32:
 
 substitutions:
   boot_name: '"M5Stick Remote <3"'
+  boot_logo_size: "48"
   friendly_name: M5stickcRemote
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
@@ -34,6 +35,7 @@ substitutions:
   icon_size_large: "19"
   header_height: "16"
   margin_size: "4"
+  slider_margin_size: "6"
   scroll_bar_width: "6"
   bottom_bar_margin: "32"
   now_playing_max_lines: "8"
@@ -49,7 +51,12 @@ substitutions:
   sleep_after: "7200"
   menu_rollover_on: "false"
   sync_active_player: "true"
+  dec_brightness_step: "10"
+  inc_brightness_step: "10"
+  dec_color_temperature_step: "10"
+  inc_color_temperature_step: "10"
   dark_mode: "true"
+  keep_states_in_sync: "false"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
@@ -191,7 +198,7 @@ display:
     dc_pin: GPIO23
     reset_pin: GPIO18
     rotation: 0
-    update_interval: 60s
+    update_interval: 3600s
     lambda: |-
       if (idleTime < 0) {
         ESP_LOGD("drawing menu", "turning on");
