--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -23,11 +23,11 @@ esp32:
 
 substitutions:
   boot_name: '"Kitchen Remote <3"'
+  boot_logo_size: "64"
   friendly_name: "Kitchen Remote"
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
-  display_size_x: "240"
   large_font_size: "24"
   medium_font_size: "20"
   small_font_size: "18"
@@ -37,7 +37,7 @@ substitutions:
   margin_size: "8"
   slider_margin_size: "6"
   scroll_bar_width: "8"
-  bottom_bar_margin: "42"
+  bottom_bar_margin: "8"
   now_playing_max_lines: "10"
   draw_now_playing_menu: "true"
   draw_battery_level: "false"
@@ -56,7 +56,7 @@ substitutions:
   dec_color_temperature_step: "10"
   inc_color_temperature_step: "10"
   dark_mode: "true"
-  keep_states_in_sync: "false"
+  keep_states_in_sync: "true"
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
@@ -152,7 +152,7 @@ display:
     dc_pin: 32
     led_pin: 04  ### see note below ###
     reset_pin: 05
-    update_interval: 600s
+    update_interval: 3600s
     rotation: 90
     lambda: |-
       if (idleTime < 0) {
@@ -161,7 +161,6 @@ display:
         idleTime = 0;
       } else if (!id(backlight).state) {
         ESP_LOGD("drawing menu", "turning off %d", idleTime);
-        id(my_display).set_update_interval(60000);
         return;
       }
       charging = true;
