--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -402,7 +402,7 @@ custom_component:
      std::vector<FriendlyNameEntity> switches {
        FriendlyNameEntity("switch.oven_fan", "Kitchen Fan")
      };
-     switchGroup = new SwitchGroupComponent(displayUpdate);
+     switchGroup = new HomeAssistantSwitchGroup(displayUpdate);
      switchGroup->setup(switches);
      return {switchGroup};
    id: switch_group_component
