--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -8,7 +8,8 @@ esphome:
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
-    - esphomeRemote/esphomeRemoteSwitch.h
+    - esphomeRemote/HomeAssistantSwitch.h
+    - esphomeRemote/HomeAssistantSwitchGroup.h
     - esphomeRemote/esphomeRemoteSensor.h
     - esphomeRemote/DisplayUpdateInterface.h
     - esphomeRemote/esphomeRemote.h
@@ -77,6 +78,9 @@ sensor:
     unit_of_measurement: '%'
 
 binary_sensor:
+  - platform: homeassistant
+    entity_id: switch.fake_sensor
+    name: fake_sensor
   - platform: gpio
     id: T4_BtnA
     pin:
