change home assistant switch to be based on a switch

--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -402,7 +402,7 @@ custom_component:
      std::vector<FriendlyNameEntity> switches {
        FriendlyNameEntity("switch.oven_fan", "Kitchen Fan")
      };
-     switchGroup = new esphome::api::home_assistant_switch::home_assistant_switch_group::HomeAssistantSwitchGroup(&displayUpdate);
+     switchGroup = new esphome::home_assistant_switch::home_assistant_switch_group::HomeAssistantSwitchGroup(&displayUpdate);
      switchGroup->setup(switches);
      return {switchGroup};
    id: switch_group_component
