--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -10,10 +10,6 @@ esphome:
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
-    - esphomeRemote/HomeAssistantSwitch.h
-    - esphomeRemote/HomeAssistantSwitch.cpp
-    - esphomeRemote/HomeAssistantSwitchGroup.h
-    - esphomeRemote/HomeAssistantSwitchGroup.cpp
     - esphomeRemote/esphomeRemoteSensor.h
     - esphomeRemote/DisplayUpdateInterface.h
     - esphomeRemote/esphomeRemote.h
@@ -62,6 +58,7 @@ substitutions:
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
 external_components:
+  - <<: !include esphomeRemote/sharedExternalComponents.yaml
   - source:
       type: git
       url: https://github.com/ssieb/custom_components
@@ -152,6 +149,9 @@ binary_sensor:
 
 # We can still control the backlight independently
 switch:
+  - platform: homeassistant_switch_group
+    entity_id: "sensor.oven_fan"
+    id: "oven_fan_switch"
   - platform: template
     name: ${friendly_name} Sleep Toggle
     id: sleep_toggle
