--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -8,10 +8,6 @@ esphome:
     - esphomeRemote/esphomeRemotePlayer.h
     - esphomeRemote/esphomeRemoteService.h
     - esphomeRemote/esphomeRemoteLight.h
-    - esphomeRemote/HomeAssistantSwitch.h
-    - esphomeRemote/HomeAssistantSwitch.cpp
-    - esphomeRemote/HomeAssistantSwitchGroup.h
-    - esphomeRemote/HomeAssistantSwitchGroup.cpp
     - esphomeRemote/esphomeRemoteSensor.h
     - esphomeRemote/DisplayUpdateInterface.h
     - esphomeRemote/esphomeRemote.h
@@ -63,6 +59,9 @@ substitutions:
 
 <<: !include esphomeRemote/sharedRemoteConfig.yaml
 
+external_components:
+  - <<: !include esphomeRemote/sharedExternalComponents.yaml
+
 sensor:
   - platform: template
     id: display_update_tick
@@ -113,6 +112,9 @@ binary_sensor:
 
 # We can still control the backlight independently
 switch:
+  - platform: homeassistant_switch_group
+    entity_id: "sensor.oven_fan"
+    id: "oven_fan_switch"
   - platform: gpio
     pin:
       number: 27
