--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -1,19 +1,19 @@
 esphome:
   name: tdisplayt4
   includes:
-    - esphomeRemote/MenuGlobals.h
-    - esphomeRemote/MenuTitle.h
-    - esphomeRemote/FriendlyNameEntity.h
-    - esphomeRemote/TextHelpers.h
-    - esphomeRemote/esphomeRemotePlayer.h
-    - esphomeRemote/esphomeRemoteService.h
-    - esphomeRemote/esphomeRemoteLight.h
-    - esphomeRemote/esphomeRemoteSensor.h
-    - esphomeRemote/DisplayUpdateInterface.h
-    - esphomeRemote/esphomeRemote.h
-    - esphomeRemote/esphomeRemoteNowPlayingMenu.h
-    - esphomeRemote/esphomeRemote3Button.h
-    - esphomeRemote/esphomeRemoteCommon.h
+    - homeThing/MenuGlobals.h
+    - homeThing/MenuTitle.h
+    - homeThing/FriendlyNameEntity.h
+    - homeThing/TextHelpers.h
+    - homeThing/esphomeRemotePlayer.h
+    - homeThing/esphomeRemoteService.h
+    - homeThing/esphomeRemoteLight.h
+    - homeThing/esphomeRemoteSensor.h
+    - homeThing/DisplayUpdateInterface.h
+    - homeThing/esphomeRemote.h
+    - homeThing/esphomeRemoteNowPlayingMenu.h
+    - homeThing/esphomeRemote3Button.h
+    - homeThing/esphomeRemoteCommon.h
 
 esp32:
   board: esp32dev
@@ -57,10 +57,10 @@ substitutions:
   dark_mode: "true"
   keep_states_in_sync: "true"
 
-<<: !include esphomeRemote/sharedRemoteConfig.yaml
+<<: !include homeThing/sharedRemoteConfig.yaml
 
 external_components:
-  - <<: !include esphomeRemote/sharedExternalComponents.yaml
+  - <<: !include homeThing/sharedExternalComponents.yaml
 
 sensor:
   - platform: template
