--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -79,9 +79,6 @@ sensor:
     unit_of_measurement: '%'
 
 binary_sensor:
-  - platform: homeassistant
-    entity_id: switch.fake_sensor
-    name: fake_sensor
   - platform: gpio
     id: T4_BtnA
     pin:
@@ -112,9 +109,7 @@ binary_sensor:
 
 # We can still control the backlight independently
 switch:
-  - platform: homeassistant_switch_group
-    entity_id: "sensor.oven_fan"
-    id: "oven_fan_switch"
+  - <<: !include homeThing/sharedSwitches.yaml
   - platform: gpio
     pin:
       number: 27
