--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -160,9 +160,7 @@ deep_sleep:
   wakeup_pin_mode: INVERT_WAKEUP
 
 switch:
-  - platform: homeassistant_switch_group
-    entity_id: "sensor.oven_fan"
-    id: "oven_fan_switch"
+  - <<: !include homeThing/sharedSwitches.yaml
   - platform: template
     id: sleep_toggle
     internal: true
