change sensors to a component

--- a/homeThing/sharedExternalComponents.yaml
+++ b/homeThing/sharedExternalComponents.yaml
@@ -1,4 +1,4 @@
 - source:
     type: local
     path: components
-  components: [ homeassistant_switch_group ]
+  components: [ homeassistant_switch_group, homeassistant_sensor_group ]
