--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -10,7 +10,6 @@ esphome:
     - homeThing/esphomeRemotePlayer.h
     - homeThing/esphomeRemoteService.h
     - homeThing/esphomeRemoteLight.h
-    - homeThing/esphomeRemoteSensor.h
     - homeThing/DisplayUpdateInterface.h
     - homeThing/esphomeRemote.h
     - homeThing/esphomeRemoteNowPlayingMenu.h
@@ -63,6 +62,9 @@ external_components:
       type: git
       url: https://github.com/ssieb/custom_components
     components: [ ip5306 ]
+
+text_sensor:
+  !include homeThing/sharedTextSensors.yaml
 
 i2c:
   sda: 21
