--- a/homeThing/sharedRemoteConfig.yaml
+++ b/homeThing/sharedRemoteConfig.yaml
@@ -353,6 +353,15 @@ homeassistant_switch_group:
   switches:
     - id: "oven_fan_switch"
 
+homeassistant_sensor_group:
+  id: sensor_group_component
+  sensors:
+    - id: sensor_weather
+    - id: sensor_temperature
+    - id: sensor_washing_machine
+    - id: sensor_plant_moisture
+    - id: sensor_kitchen_air
+
 custom_component:
 # Home assistant speakers and tv. Set TV up with a sound bar
  - lambda: |-
@@ -360,8 +369,7 @@ custom_component:
      std::vector<TVSetup> tvSetup = {
        TVSetup("media_player.55_tcl_roku_tv", "TV", 
          &soundBar
-       ),
-       TVSetup("media_player.55_tcl_roku_tv", "Fake", NULL)
+       )
      };
      std::vector<SpeakerSetup> speakerSetup = {
        SpeakerSetup("media_player.kitchen", "Kitchen"),
@@ -401,18 +409,3 @@ custom_component:
      lightGroup->setup(lights);
      return {lightGroup};
    id: light_group_component
-
- ## Home assistant sensors. Set with a friendly name
- - lambda: |-
-     std::vector<FriendlyNameEntity> sensors {
-       FriendlyNameEntity("sensor.vancouver_forecast", ""),
-       FriendlyNameEntity("sensor.accuweather_realfeel_temperature", "Temperature"),
-       FriendlyNameEntity("sensor.washing_machine_state", "Washing Machine"),
-       FriendlyNameEntity("sensor.soil_sensor_soil_moisture_2", "Plant Moisture"),
-       FriendlyNameEntity("sensor.particulate_matter_2_5um_concentration", "Kitchen Air"),
-       FriendlyNameEntity("sensor.oven_temp_temperature_probe_1", "Oven Temp")
-     };
-     sensorGroup = new SensorGroupComponent();
-     sensorGroup->setup(sensors);
-     return {sensorGroup};
-   id: sensor_group_component
