feat: lay groundwork for kodi support
this is WIP. Currently only shows configured kodis and there respective status.
TBD: menu/gui for controlling kodi

Note: this is not yet based on the latest homething changes

--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -407,6 +407,14 @@ custom_component:
      return {switchGroup};
    id: switch_group_component
 
+ ## Home assistant kodis. Set with a friendly name
+ - lambda: |-
+     std::vector<FriendlyNameEntity> kodis {
+       FriendlyNameEntity("media_player.libreelec", "my Kodi"),
+     };
+     kodiGroup = new KodiGroupComponent(displayUpdate);
+     kodiGroup->setup(kodis);
+     return {kodiGroup};
  ## Home assistant sensors. Set with a friendly name
  - lambda: |-
      std::vector<FriendlyNameEntity> sensors {
