--- a/homeThing/sharedExternalComponents.yaml
+++ b/homeThing/sharedExternalComponents.yaml
@@ -1,4 +1,8 @@
 - source:
     type: local
     path: components
-  components: [ homeassistant_switch_group, homeassistant_sensor_group ]
+  components: [ 
+    homeassistant_switch_group, 
+    homeassistant_sensor_group,
+    homeassistant_light_group
+  ]
