--- a/homething-lilygo.yaml
+++ b/homething-lilygo.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: lilygo_display
+  name: "homething-lilygo"
   platform: ESP32
   board: featheresp32
   includes:
@@ -15,9 +15,9 @@ esphome:
     - homeThing/esphomeRemoteCommon.h
 
 substitutions:
-  boot_name: '"TDisplay Remote <3"'
+  boot_name: '"homeThing <3"'
   boot_logo_size: "48"
-  friendly_name: "TDisplay Remote"
+  friendly_name: "homeThing ttgo"
   wifi_ssid: !secret wifi_ssid
   wifi_password: !secret wifi_password
   wifi_fallback_password: !secret wifi_fallback_password
@@ -52,13 +52,15 @@ substitutions:
   keep_states_in_sync: "false"
 
 <<: !include homeThing/sharedRemoteConfig.yaml
-
 external_components:
   - <<: !include homeThing/sharedExternalComponents.yaml
 
 text_sensor:
   !include homeThing/sharedTextSensors.yaml
-  
+
+light:
+  !include homeThing/sharedLights.yaml
+
 sensor:
 ## Rotary
   - platform: rotary_encoder
@@ -67,12 +69,12 @@ sensor:
     name: "Rotary Encoder"
     internal: true
     pin_a:
-      number: 12
+      number: 21
       mode:
         input: true
         pullup: true
     pin_b:
-      number: 13
+      number: 22
       mode:
         input: true
         pullup: true
@@ -185,7 +187,7 @@ binary_sensor:
   - platform: gpio
     internal: true
     pin:
-      number: 21
+      number: 15
       inverted: true
       mode:
         input: true
@@ -198,7 +200,7 @@ binary_sensor:
   - platform: gpio
     internal: true
     pin:
-      number: 22
+      number: 2
       inverted: true
       mode:
         input: true
@@ -211,7 +213,7 @@ binary_sensor:
   - platform: gpio
     internal: true
     pin:
-      number: 17
+      number: 12
       inverted: true
       mode:
         input: true
@@ -224,7 +226,7 @@ binary_sensor:
   - platform: gpio
     internal: true
     pin:
-      number: 2
+      number: 13
       inverted: true
       mode:
         input: true
@@ -237,7 +239,7 @@ binary_sensor:
   - platform: gpio
     internal: true
     pin:
-      number: 15
+      number: 17
       inverted: true
       mode:
         input: true
