--- a/homeThing/sharedExternalComponents.yaml
+++ b/homeThing/sharedExternalComponents.yaml
@@ -4,5 +4,6 @@
   components: [ 
     homeassistant_switch_group, 
     homeassistant_sensor_group,
-    homeassistant_light_group
+    homeassistant_light_group,
+    homeassistant_media_player
   ]
