add roku tv and fix media player selection

--- a/homeThing/sharedRemoteConfig.yaml
+++ b/homeThing/sharedRemoteConfig.yaml
@@ -376,11 +376,20 @@ media_player:
     name: Beam
     entity_id: "media_player.beam"
     id: media_player_beam
+    type: sonos
+  - platform: homeassistant_media_player
+    name: TV
+    entity_id: "media_player.55_tcl_roku_tv"
+    id: media_player_tv
+    type: roku
 
 homeassistant_media_player:
   id: media_group_component
   media_players:
     - id: media_player_beam
+      type: sonos
+    - id: media_player_tv
+      type: roku
 
 custom_component:
 # Home assistant speakers and tv. Set TV up with a sound bar
