--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -7,8 +7,6 @@ esphome:
     - homeThing/MenuTitle.h
     - homeThing/FriendlyNameEntity.h
     - homeThing/TextHelpers.h
-    - homeThing/esphomeRemotePlayer.h
-    - homeThing/esphomeRemoteService.h
     - homeThing/DisplayUpdateInterface.h
     - homeThing/esphomeRemote.h
     - homeThing/esphomeRemoteNowPlayingMenu.h
@@ -164,6 +162,26 @@ switch:
     internal: true
 
 light:
+  - platform: homeassistant_light_group
+    id: light_bathroom_lights
+    entity_id: light.bathroom_lights
+    name: Bathroom 
+  - platform: homeassistant_light_group
+    id: light_bedroom_lights
+    entity_id: light.bedroom_lights
+    name: Bedroom 
+  - platform: homeassistant_light_group
+    id: light_kitchen_lights
+    entity_id: light.kitchen_lights
+    name: Kitchen 
+  - platform: homeassistant_light_group
+    id: light_living_room_lights
+    entity_id: light.living_room_lights
+    name: Living Room 
+  - platform: homeassistant_light_group
+    id: light_office_lamp
+    entity_id: light.office_lamp
+    name: Office Lamp
   - platform: fastled_clockless
     chipset: SK6812
     pin: GPIO15
