--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -5,8 +5,6 @@ esphome:
     - homeThing/MenuTitle.h
     - homeThing/FriendlyNameEntity.h
     - homeThing/TextHelpers.h
-    - homeThing/esphomeRemotePlayer.h
-    - homeThing/esphomeRemoteService.h
     - homeThing/DisplayUpdateInterface.h
     - homeThing/esphomeRemote.h
     - homeThing/esphomeRemoteNowPlayingMenu.h
@@ -58,110 +56,146 @@ substitutions:
 <<: !include homeThing/sharedRemoteConfig.yaml
 
 i2c:
-   - id: bus_a
-     sda: GPIO21
-     scl: GPIO22
-     scan: true
+  - id: bus_a
+    sda: GPIO21
+    scl: GPIO22
+    scan: true
 
 external_components:
-  - <<: !include homeThing/sharedExternalComponents.yaml
-  - source:
-      type: git
-      url: https://gitlab.com/geiseri/esphome_extras.git
-    refresh: 0s
-    components: [axp192]
+ - source:
+     type: git
+     url: https://gitlab.com/geiseri/esphome_extras.git
+   refresh: 0s
+   components: [axp192]
+ - <<: !include homeThing/sharedExternalComponents.yaml
 
 axp192:
-  id: axp
-  address: 0x34
-  i2c_id: bus_a
-  update_interval: 60s
+ id: axp
+ address: 0x34
+ update_interval: 60s
+ charge_voltage: 4150mV
+ dcdc1_voltage: 3300mv
+ dcdc3_voltage: 1.5V
 
 text_sensor:
-  !include homeThing/sharedTextSensors.yaml
+ !include homeThing/sharedTextSensors.yaml
 
 sensor:
-    # AXP192 power management - must be present to initialize TFT power on
-  - platform: axp192
-    axp192_id: axp
-    id: batteryPercent
-  - platform: template
-    id: display_update_tick
-    filters:
-      - debounce: 0.02s
-    on_value :
-      then:
-        - lambda: |-
-            if(idleTime < 2) {
-              displayUpdate.updateDisplay(true);
-            }
+   # AXP192 power management - must be present to initialize TFT power on
+ - platform: axp192
+   axp192_id: axp
+   id: batteryPercent
+   type: battery_power
+ - platform: template
+   id: display_update_tick
+   filters:
+     - debounce: 0.02s
+   on_value :
+     then:
+       - lambda: |-
+           if(idleTime < 2) {
+             displayUpdate.updateDisplay(true);
+           }
 # internal LED
 light:
-  - platform: monochromatic
-    output:  builtin_led
-    name: Led
-    id: led1
-  - platform: axp192
-    id: axpbacklight
-    axp192_id: axp
-    restore_mode: ALWAYS_ON
-    name: Backlight
+ - platform: homeassistant_light_group
+   id: light_bathroom_lights
+   entity_id: light.bathroom_lights
+   name: Bathroom 
+ - platform: homeassistant_light_group
+   id: light_bedroom_lights
+   entity_id: light.bedroom_lights
+   name: Bedroom 
+ - platform: homeassistant_light_group
+   id: light_kitchen_lights
+   entity_id: light.kitchen_lights
+   name: Kitchen 
+ - platform: homeassistant_light_group
+   id: light_living_room_lights
+   entity_id: light.living_room_lights
+   name: Living Room 
+ - platform: homeassistant_light_group
+   id: light_office_lamp
+   entity_id: light.office_lamp
+   name: Office Lamp
+ - platform: monochromatic
+   output:  builtin_led
+   name: Led
+   id: led1
+   internal: True
+ - platform: monochromatic
+   output: axp_ldo3
+   restore_mode: ALWAYS_ON
+   name: "Backlight"
+   id: axpbacklight
+   internal: True
 
 output:
-  - platform: ledc
-    pin: 10
-    inverted: true
-    id: builtin_led
+ - platform: ledc
+   pin: 10
+   inverted: true
+   id: builtin_led
+ - platform: axp192
+   axp192_id: axp
+   output: ldo3
+   id: axp_ldo3  
 
 binary_sensor:
-  - platform: axp192
-    axp192_id: axp
-    type: charging
-    id: axp_charger
-    name: Charger
-    on_state:
-      then:
-        lambda: |-
-          charging = x;
-  - platform: gpio
-    pin:
-      number: GPIO37
-      inverted: true
-    name: Button A
-    on_press:
-      then:
-        lambda: |-
-            buttonPressRight();
-            auto call = id(led1).turn_on();
-            call.set_transition_length(0);
-            call.perform();
-    on_release:
-      then:
-        - light.turn_off: led1
-        
-  - platform: gpio
-    pin:
-      number: GPIO39
-      inverted: true
-    name: Button B
-    on_press:
-      then:
-        lambda: |-
-            buttonPressSelect();
-            auto call = id(led1).turn_on();
-            call.set_transition_length(0);
-            call.perform();
-    on_release:
-      then:
-        - light.turn_off: led1
+ - platform: axp192
+   axp192_id: axp
+   type: charge_indicate
+   id: axp_charger
+   name: "Charger"
+   on_state:
+     then:
+       lambda: |-
+         charging = x;
+ - platform: gpio
+   pin:
+     number: GPIO37
+     inverted: true
+   name: Button A
+   on_press:
+     then:
+       lambda: |-
+           buttonPressRight();
+           auto call = id(led1).turn_on();
+           call.set_transition_length(0);
+           call.perform();
+   on_release:
+     then:
+       - light.turn_off: led1
+       
+ - platform: gpio
+   pin:
+     number: GPIO39
+     inverted: true
+   name: Button B
+   on_press:
+     then:
+       lambda: |-
+           buttonPressSelect();
+           auto call = id(led1).turn_on();
+           call.set_transition_length(0);
+           call.perform();
+   on_release:
+     then:
+       - light.turn_off: led1
 
 deep_sleep:
-  id: deep_sleep_m5
-  wakeup_pin: 37
-  wakeup_pin_mode: INVERT_WAKEUP
+ id: deep_sleep_m5
+ wakeup_pin: 37
+ wakeup_pin_mode: INVERT_WAKEUP
 
-switch:
-  - <<: !include homeThing/sharedSwitches.yaml
+ switch:
+  - platform: homeassistant_switch_group
+    entity_id: "switch.oven_fan"
+    name: "Oven Fan"
+    id: oven_fan_switch
+  - platform: axp192
+    axp192_id: axp
+    output: ldo3
+    name: LDO3
   - platform: template
     id: sleep_toggle
     internal: true
